# CCraft

./: .gitignore  Cargo.toml  Makefile  README.MD
config/: Cargo.toml
config/src/: defaults.rs  lib.rs  loader.rs  types.rs
src/: args.rs  main.rs
src/build_system/: building.rs  cache.rs  dependencies.rs  mod.rs  model.rs
src/cli/: mod.rs  types.rs
src/cli/commands/: build_c.rs  init_c.rs  mod.rs  new.rs  new_c.rs
src/commands/: build_c.rs  compile_c.rs  init_c.rs  mod.rs  new_c.rs  run_c.rs
src/config/: core.rs  defaults.rs  file.rs  loader.rs  mod.rs  types.rs
src/utils/: cmd.rs  file.rs  folder.rs  mod.rs  printer.rs
testpy/: tests.py
utils/: Cargo.toml
utils/src/: directory.rs  file.rs  lib.rs  other.rs  printer.rs
