[package]
name = "ccraft"
version = "0.1.0"
edition = "2021"
authors = ["The CCraftr Developers"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
serde = { version = "1.0.188", features = ["derive"] }
toml = "0.8.2"
