[package]
name = "ccraft"
version = "0.1.0"
edition = "2021"
authors = ["The CCraftr Developers"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
utils = { path = "utils" }
config = { path = "config" }
serde_json = "1.0.107"
lazy_static = "1.4.0"
regex = "1.10.2"
serde = "1.0.189"
